--- a/TobotApp/src/main/res/values-en-rGB/strings.xml
+++ b/TobotApp/src/main/res/values-en-rGB/strings.xml
@@ -1,11 +1,11 @@
 <resources>
     <string name="app_name">TongBu Map</string>
-    <string name="tv_sta_tips">tip: please connect to the wireless network connected to the chassis first</string>
+    <string name="tv_sta_tips">tip:please connect to the wireless network connected to the chassis first</string>
     <string name="et_ip_hint_tips">input the IP address of the chassis</string>
     <string name="btn_connect">connect</string>
     <string name="tv_connect_history">connection history</string>
     <string name="delete_success">delete succeeded…</string>
-    <string name="ip_empty_tips">IP address cannot be empty, please enter…</string>
+    <string name="ip_empty_tips">IP address cannot be empty,please enter…</string>
     <string name="tv_connect_ing">connecting…</string>
     <string name="tv_device_info">device info</string>
     <string name="tv_config">configure</string>
@@ -38,11 +38,11 @@
     <string name="tv_version_update">version update</string>
     <string name="tv_robot">TongBu robot</string>
     <string name="tv_scan_follow">Scan code concerns WeChat \nofficial account</string>
-    <string name="tv_info">tel:13371936025\nemail:sales@tobotai.com\nwebsite:www.tobotai.com\naddress:11 / F, block a, Changtai enterprise Plaza, No. 899, Haining Road, JingAn District, Shanghai</string>
+    <string name="tv_info">tel:13371936025\nemail:sales@tobotai.com\nwebsite:www.tobotai.com\naddress:11/F,block a,Changtai enterprise Plaza,No.899,Haining Road,JingAn District,Shanghai</string>
     <string name="tv_stop">stop</string>
     <string name="tv_task">task</string>
     <string name="tv_navigate">navigate</string>
-    <string name="tv_status_show">positioning quality[%1$d]，charging state[%2$s]，battery[%3$d]，motion state[%4$s]</string>
+    <string name="tv_status_show">positioning quality[%1$d],charging state[%2$s],battery[%3$d],motion state[%4$s]</string>
     <string name="tv_charge_true">charging</string>
     <string name="tv_charge_false">not charged</string>
     <string name="tv_map">map</string>
@@ -58,9 +58,9 @@
     <string name="tv_virtual_wall">virtual wall</string>
     <string name="tv_virtual_track">virtual track</string>
     <string name="tv_rubber">rubber</string>
-    <string name="emergency_stop_tips">the emergency stop button is pressed. Please try again later</string>
-    <string name="break_stop_tips">please release the brake button first</string>
-    <string name="direct_charge_to_navigate_tips">please unplug the direct charging line first</string>
+    <string name="emergency_stop_tips">Emergency stop button is pressed</string>
+    <string name="break_stop_tips">The brake button is pressed</string>
+    <string name="direct_charge_to_navigate_tips">Is fill continuously</string>
     <string name="btn_add_current_point">add point</string>
     <string name="btn_sort_point">sort by number</string>
     <string name="btn_edit">edit</string>
@@ -73,11 +73,11 @@
     <string name="navigate_remind">navigation retrying…</string>
     <string name="navigate_error">navigation exception</string>
     <string name="navigate_result">navigation result:%1$b</string>
-    <string name="move_recover_quality_low_tips">The current location quality is less than %1$d, the navigation cannot be normal, you are advised to manually stop.</string>
+    <string name="move_recover_quality_low_tips">The current location quality is less than %1$d,the navigation cannot be normal,you are advised to manually stop.Please move the machine to a place where the feature points are obvious for relocation operation.</string>
     <string name="relocation_map_tips">positioning…</string>
     <string name="relocation_map_success">relocation succeeded…</string>
     <string name="relocation_map_fail">relocation failed…</string>
-    <string name="tv_map_switch_tips">are you sure you want to load the map? The current map will be cleared after loading!</string>
+    <string name="tv_map_switch_tips">are you sure you want to load the map?The current map will be cleared after loading!</string>
     <string name="tv_map_delete_tips">are you sure you want to delete this map?</string>
     <string name="tv_location_delete_tips">are you sure you want to delete this location point?</string>
     <string name="tv_clean_map_tips">are you sure you want to clear the map?</string>
@@ -85,24 +85,24 @@
     <string name="btn_confirm">Confirm</string>
     <string name="set_success_tips">set successfully…</string>
     <string name="set_fail_tips">setting failed…</string>
-    <string name="name_empty_tips">The location point name cannot be empty, please enter…</string>
-    <string name="map_name_empty_tips">The map name cannot be empty, please enter…</string>
-    <string name="slam_connect_not_tips">sorry, not connected to the chassis yet</string>
+    <string name="name_empty_tips">The location point name cannot be empty,please enter…</string>
+    <string name="map_name_empty_tips">The map name cannot be empty,please enter…</string>
+    <string name="slam_connect_not_tips">sorry,not connected to the chassis yet</string>
     <string name="tv_title_save_map">save map</string>
     <string name="tv_title_edit_map">rename map</string>
     <string name="et_hint_map_tips">input the map name</string>
     <string name="et_hint_edit_map_tips">input a new map name</string>
     <string name="et_hint_location_tips">Please enter the location point name</string>
-    <string name="et_hint_edit_location_tips">Please enter the location point name (required)</string>
-    <string name="et_hint_edit_location_china_tips">input Chinese name (optional)</string>
-    <string name="et_hint_edit_location_english_tips">input English name (optional)</string>
+    <string name="et_hint_edit_location_tips">Please enter the location point name(required)</string>
+    <string name="et_hint_edit_location_china_tips">input Chinese name(optional)</string>
+    <string name="et_hint_edit_location_english_tips">input English name(optional)</string>
     <string name="btn_update_location">update point location</string>
     <string name="tv_config_ultrasonic">sonar switch</string>
     <string name="btn_ultrasonic_area">sonar area</string>
-    <string name="name_rule_tips">Tips: Please name the locations and points appropriately according to the requirements. It is suggested to name them after the number type.</string>
-    <string name="name_edit_rule_tips">Tips: The name of the location dot and the name in Both Chinese and English can be modified, but cannot be repeated!</string>
-    <string name="map_rule_tips">Tips: Please name the map properly according to the requirements. If the saved map name is consistent with the existing map name, the saved map name will be overwritten.</string>
-    <string name="map_edit_rule_tips">Tips: Please name the map properly according to the requirements. If the saved map name is consistent with the existing map name, the saved map name will be overwritten.</string>
+    <string name="name_rule_tips">Tips:Please name the locations and points appropriately according to the requirements.It is suggested to name them after the number type.</string>
+    <string name="name_edit_rule_tips">Tips:The name of the location dot and the name in Both Chinese and English can be modified,but cannot be repeated!</string>
+    <string name="map_rule_tips">Tips:Please name the map properly according to the requirements.If the saved map name is consistent with the existing map name,the saved map name will be overwritten.</string>
+    <string name="map_edit_rule_tips">Tips:Please name the map properly according to the requirements.If the saved map name is consistent with the existing map name,the saved map name will be overwritten.</string>
     <string name="map_load_tips">map loading…</string>
     <string name="map_load_fail_tips">map loading failed…</string>
     <string name="map_load_success_tips">map loaded successfully…</string>
@@ -114,15 +114,15 @@
     <string name="map_save_fail_tips">map save failed…</string>
     <string name="map_edit_success_tips">map modified successfully…</string>
     <string name="map_edit_fail_tips">map modification failed…</string>
-    <string name="map_exist_tips">the map name already exists, please rename…</string>
-    <string name="number_edit_fail_tips">The location point name already exists, please rename it…</string>
-    <string name="name_china_edit_fail_tips">the Chinese name already exists. Please rename it…</string>
-    <string name="name_english_edit_fail_tips">the English name already exists. Please rename it…</string>
-    <string name="slam_not_connect_tips">sorry, not connected to the chassis, please try again later…</string>
-    <string name="net_not_connect_tips">the network is disconnected. Please connect to the network first…</string>
+    <string name="map_exist_tips">the map name already exists,please rename…</string>
+    <string name="number_edit_fail_tips">The location point name already exists,please rename it…</string>
+    <string name="name_china_edit_fail_tips">the Chinese name already exists.Please rename it…</string>
+    <string name="name_english_edit_fail_tips">the English name already exists.Please rename it…</string>
+    <string name="slam_not_connect_tips">sorry,not connected to the chassis,please try again later…</string>
+    <string name="net_not_connect_tips">the network is disconnected.Please connect to the network first…</string>
     <string name="version_latest">no new version detected…</string>
     <string name="tv_upgrade_title">new version found</string>
-    <string name="tv_upgrade_tips">new version detected, update?</string>
+    <string name="tv_upgrade_tips">new version detected,update?</string>
     <string name="tv_ignore">ignore</string>
     <string name="tv_upgrade">update</string>
     <string name="tv_check_version_tips">testing…</string>
@@ -131,27 +131,27 @@
     <string name="tv_apk_download_begin">start download</string>
     <string name="tv_apk_download_tips">downloading the TongBu drawing…</string>
     <string name="tv_apk_content_tips">connecting to server…</string>
-    <string name="tv_apk_download_complete">download completed, click Install</string>
+    <string name="tv_apk_download_complete">download completed,click Install</string>
     <string name="tv_point_post_tips">position point coordinates</string>
     <string name="tv_point_tips">current location point:%1$s</string>
-    <string name="et_hint_start_x">input the starting coordinate X (required)</string>
-    <string name="et_hint_start_y">input the starting coordinate y (required)</string>
-    <string name="et_hint_end_x">input the end coordinate X (required)</string>
-    <string name="et_hint_end_y">input the ending coordinate y (required)</string>
-    <string name="start_x_empty_tips">starting coordinate X cannot be empty, please enter…</string>
-    <string name="start_y_empty_tips">starting coordinate y cannot be empty, please enter…</string>
-    <string name="end_x_empty_tips">end coordinate X cannot be empty, please enter…</string>
-    <string name="end_y_empty_tips">end coordinate y cannot be empty, please enter…</string>
+    <string name="et_hint_start_x">input the starting coordinate X(required)</string>
+    <string name="et_hint_start_y">input the starting coordinate y(required)</string>
+    <string name="et_hint_end_x">input the end coordinate X(required)</string>
+    <string name="et_hint_end_y">input the ending coordinate y(required)</string>
+    <string name="start_x_empty_tips">starting coordinate X cannot be empty,please enter…</string>
+    <string name="start_y_empty_tips">starting coordinate y cannot be empty,please enter…</string>
+    <string name="end_x_empty_tips">end coordinate X cannot be empty,please enter…</string>
+    <string name="end_y_empty_tips">end coordinate y cannot be empty,please enter…</string>
     <string name="pose_request_success_tips">location point obtained successfully…</string>
-    <string name="pose_request_fail_tips">sorry, failed to get location point, please try again later…</string>
+    <string name="pose_request_fail_tips">sorry,failed to get location point,please try again later…</string>
     <string name="tv_create_task">create task</string>
     <string name="task_point_empty_tips">please create a location point first…</string>
-    <string name="tv_create_task_title">create task (click to select)</string>
+    <string name="tv_create_task_title">create task(click to select)</string>
     <string name="tv_select_all">select all</string>
     <string name="tv_select_all_cancel">deselect all</string>
     <string name="tv_loop_implement">infinite cycles</string>
     <string name="btn_start_implement">start execution</string>
-    <string name="pose_get_fail_tips">failed to get machine attitude. Please add again…</string>
+    <string name="pose_get_fail_tips">failed to get machine attitude.Please add again…</string>
     <string name="tv_docking_true">at the charging point</string>
     <string name="tv_docking_false">not in charge point</string>
     <string name="tv_file_catalog">file directory:%1$s</string>
@@ -169,7 +169,7 @@
     <string name="log_file_out">Log file out(%1$s)</string>
     <string name="log_no">Nothing</string>
     <string name="log_select_tips">Please re-enter the application and start logging</string>
-    <string name="et_rotate_speed_hint_tips">enter the rotation angle value(for example: 10)</string>
+    <string name="et_rotate_speed_hint_tips">enter the rotation angle value(for example:10)</string>
     <string name="tv_rotate_direction">rotation direction</string>
     <string name="to_left">to left</string>
     <string name="to_right">to right</string>
@@ -177,24 +177,24 @@
     <string name="rotate_speed_empty_tips">rotation angle value cannot be empty</string>
     <string name="tv_save_task">save task</string>
     <string name="et_hint_task_tips">input task name</string>
-    <string name="tv_task_tips">warm tip: task name represents the flag of the created task, which cannot be repeated!</string>
+    <string name="tv_task_tips">warm tip:task name represents the flag of the created task,which cannot be repeated!</string>
     <string name="task_empty_tips">task name cannot be empty…</string>
-    <string name="task_name_exist_tips">path name already exists, please rename…</string>
-    <string name="tv_execute_task_tips">prompt: please confirm whether the task matches the current map (click execute, long press Delete)</string>
+    <string name="task_name_exist_tips">path name already exists,please rename…</string>
+    <string name="tv_execute_task_tips">prompt:please confirm whether the task matches the current map(click execute,long press Delete)</string>
     <string name="tv_implement_count">number of cycles:%1$d</string>
     <string name="tv_task_point_tips">trajectory\n%1$s</string>
     <string name="tv_charge_switch">add back pile charging</string>
-    <string name="tv_charge_switch_tips">Tip: If charging is turned on,pile charging will be added back to the motion track</string>
-    <string name="tv_loop_tips">prompt: if infinite cycles are enabled, infinite cycles will be executed first, and the number of cycles will be invalid</string>
+    <string name="tv_charge_switch_tips">Tip:If charging is turned on,pile charging will be added back to the motion track</string>
+    <string name="tv_loop_tips">prompt:if infinite cycles are enabled,infinite cycles will be executed first,and the number of cycles will be invalid</string>
     <string name="tv_socket_connect_success_tips">socket connected</string>
     <string name="tv_signal_tips">network signal:%1$d(%2$s)</string>
     <string name="signal_1">strong</string>
     <string name="signal_2">relatively strong</string>
     <string name="signal_3">general</string>
-    <string name="slam_disconnect_tips">Chassis connection disconnects, please exit current application!(%1$s)</string>
+    <string name="slam_disconnect_tips">Chassis connection disconnects,please exit current application!(%1$s)</string>
     <string name="operate_error_tips">operation failed…</string>
     <string name="tv_reset_charge_title">reset charge</string>
-    <string name="tv_reset_charge_tips">The steps are as follows: n1, move the charging pile to a new position \n2, navigate or push the machine to the charging pile and it is in the charging state \n3, click "relocation", click "reset" \n4, navigate the machine out of the charging pile, and the reset is successful</string>
+    <string name="tv_reset_charge_tips">The steps are as follows:\n1,move the charging pile to a new position \n2,navigate or push the machine to the charging pile and it is in the charging state \n3,click "relocation",click "reset" \n4,navigate the machine out of the charging pile,and the reset is successful</string>
     <string name="btn_reset">reset</string>
     <string name="reset_not_charge_tips">please move the machine to the charging point first</string>
     <string name="reset_success_tips">reset success…</string>
@@ -218,16 +218,16 @@
     <string name="cliff">cliff</string>
     <string name="bumper">bumper</string>
     <string name="sensor_num_not_digits_tips">Incorrect numbering format…</string>
-    <string name="set_sensor_result">operate：%1$b</string>
+    <string name="set_sensor_result">operate:%1$b</string>
     <string name="invalid">invalid</string>
     <string name="open">normal</string>
     <string name="error">error</string>
     <string name="btn_upgrade">upgrade</string>
     <string name="tv_upgrade_file_delete_tips">Are you sure you want to delete the %1$s file?</string>
-    <string name="tv_upgrade_file_tips">Are you sure you want to upgrade the %1$s file?(Upgrade is time consuming, please do not interrupt!)</string>
+    <string name="tv_upgrade_file_tips">Are you sure you want to upgrade the %1$s file?(Upgrade is time consuming,please do not interrupt!)</string>
     <string name="upgrade_ing">upgrading…</string>
-    <string name="firmware_upgrade_success_tips">Upgrade success! Please manually restart the chassis and exit the current application!</string>
-    <string name="firmware_upgrade_fail_tips">Upgrade failed! Please re-open the current application and wait to connect the chassis before performing the upgrade!(If you fail, try many times.)</string>
+    <string name="firmware_upgrade_success_tips">Upgrade success!Please manually restart the chassis and exit the current application!</string>
+    <string name="firmware_upgrade_fail_tips">Upgrade failed!Please re-open the current application and wait to connect the chassis before performing the upgrade!(If you fail,try many times.)</string>
     <string name="trigger_true">trigger</string>
     <string name="trigger_false">no trigger</string>
     <string name="tv_query_frequency">query frequency</string>
@@ -236,9 +236,9 @@
     <string name="tv_sensor_warning_title">sensor trigger warning</string>
     <string name="tv_type">type</string>
     <string name="tv_count">count</string>
-    <string name="control_software_version_not_match">Control board firmware failed to load, please update…</string>
-    <string name="tv_chassis_radius_tips">Chassis radius: %1$sM</string>
-    <string name="et_chassis_radius_hint">enter chassis radius (unit: meter)</string>
-    <string name="chassis_radius_empty_tips">Chassis radius value cannot be empty, please enter…</string>
+    <string name="control_software_version_not_match">Control board firmware failed to load,please update…</string>
+    <string name="tv_chassis_radius_tips">Chassis radius:%1$sM</string>
+    <string name="et_chassis_radius_hint">enter chassis radius(unit: meter)</string>
+    <string name="chassis_radius_empty_tips">Chassis radius value cannot be empty,please enter…</string>
     <string name="btn_set">Set</string>
 </resources>
